Computing should work now.